[FLINK-33764] Track Heap usage and GC pressure to avoid unnecessary scaling